--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
-                                        French
+                                        Courses
                                         <span class="rating_number">
                                             (5,430)
                                         </span>
@@ -293,7 +293,7 @@
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
-                                        Spanish
+                                        Projects
                                         <span class="rating_number">
                                             (5,393)
                                         </span>
@@ -311,7 +311,7 @@
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
-                                        Portuguese (Brazil)
+                                        Specializations
                                         <span class="rating_number">
                                             (5,102)
                                         </span>
@@ -518,6 +518,73 @@
                                         Strategy
                                         <span class="rating_number">
                                             (814)
+                                        </span>
+                                    </span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="information">
+                    <div class="tech">
+                        <div class="computer">
+                            <div class="computer_div">Subtitles</div>
+                        </div>
+                        <div class="business">
+                            <div class="spanish">
+                                <label for="#" class="label">
+                                    <span class="checkbox">
+                                        <input type="checkbox" width="24px" height="24px">
+                                    </span>
+                                    <span class="number">
+                                        English
+                                        <span class="rating_number">
+                                            (7,268)
+                                        </span>
+                                    </span>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="business">
+                            <div class="spanish">
+                                <label for="#" class="label">
+                                    <span class="checkbox">
+                                        <input type="checkbox" width="24px" height="24px">
+                                    </span>
+                                    <span class="number">
+                                        French
+                                        <span class="rating_number">
+                                            (5,430)
+                                        </span>
+                                    </span>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="business">
+                            <div class="spanish">
+                                <label for="#" class="label">
+                                    <span class="checkbox">
+                                        <input type="checkbox" width="24px" height="24px">
+                                    </span>
+                                    <span class="number">
+                                        Spanish
+                                        <span class="rating_number">
+                                            (5,393)
+                                        </span>
+                                    </span>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="business">
+                            <div class="spanish">
+                                <label for="#" class="label">
+                                    <span class="checkbox">
+                                        <input type="checkbox" width="24px" height="24px">
+                                    </span>
+                                    <span class="number">
+                                        Arabic
+                                        <span class="rating_number">
+                                            (5,102)
                                         </span>
                                     </span>
                                 </label>
