--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                     <div class="free_one">
                                         <div class="form">
                                             <input type="text" value="free" placeholder="what do you want to learn?">
-                                            <div class="search-btn"><svg width="16px" height="16px" viewBox="0 0 16 16" version="1.1" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;"><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-293.000000, -23.000000)"><g fill="#E1E1E1"><g transform="translate(293.000000, 22.000000)"><path d="M11.355485,11.4503883 L16.0066609,16.1015642 L15.1015642,17.0066609 L10.4503883,12.355485 C9.34711116,13.2583262 7.93681293,13.8 6.4,13.8 C2.8653776,13.8 0,10.9346224 0,7.4 C0,3.8653776 2.8653776,1 6.4,1 C9.9346224,1 12.8,3.8653776 12.8,7.4 C12.8,8.93681293 12.2583262,10.3471112 11.355485,11.4503883 Z M6.4,12.52 C9.22769792,12.52 11.52,10.2276979 11.52,7.4 C11.52,4.57230208 9.22769792,2.28 6.4,2.28 C3.57230208,2.28 1.28,4.57230208 1.28,7.4 C1.28,10.2276979 3.57230208,12.52 6.4,12.52 Z"></path></g></g></g></svg></div>
+                                            <div class="search-btn"><svg width="14px" height="16px" viewBox="0 0 16 16" version="1.1" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;"><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-293.000000, -23.000000)"><g fill="#E1E1E1"><g transform="translate(293.000000, 22.000000)"><path d="M11.355485,11.4503883 L16.0066609,16.1015642 L15.1015642,17.0066609 L10.4503883,12.355485 C9.34711116,13.2583262 7.93681293,13.8 6.4,13.8 C2.8653776,13.8 0,10.9346224 0,7.4 C0,3.8653776 2.8653776,1 6.4,1 C9.9346224,1 12.8,3.8653776 12.8,7.4 C12.8,8.93681293 12.2583262,10.3471112 11.355485,11.4503883 Z M6.4,12.52 C9.22769792,12.52 11.52,10.2276979 11.52,7.4 C11.52,4.57230208 9.22769792,2.28 6.4,2.28 C3.57230208,2.28 1.28,4.57230208 1.28,7.4 C1.28,10.2276979 3.57230208,12.52 6.4,12.52 Z"></path></g></g></g></svg></div>
                                         </div>
                                     </div>
                                    
@@ -91,6 +91,17 @@
     </header>
     <div class="whole_browse">
         <div class="browse">
+            <div class="arrows_whole_browse">
+                <div class="_a_browse">
+                    <a href="browse">Browse</a>
+                </div>
+                <div class="right_arrow">
+                    <svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" class="breadcrumb-divider css-1lzurvc" id="cds-react-aria-345"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg>
+                </div>
+                <span class="free_browse">
+                    Free
+                </span>
+            </div>
             <div class="browse_arrow">
                 <div class="left_arrow">
                     <svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" class="breadcrumb-divider css-17st3jf" id="cds-react-aria-5"><path fill-rule="evenodd" clip-rule="evenodd" d="M4.707 8l6.647-6.646-.707-.708L3.292 8l7.353 7.354.708-.707L4.707 8z" fill="#0F1114"></path></svg>
