--- a/index.html
+++ b/index.html
@@ -38,6 +38,40 @@
                                             <span>Explore</span>
                                             <svg aria-hidden="true" fill="none" focusable="false" height="12" viewBox="0 0 16 16" width="12" id="cds-react-aria-1" class="css-1u8qly9"><path fill-rule="evenodd" clip-rule="evenodd" d="M8 11.293L1.354 4.646l-.708.708L8 12.707l7.354-7.353-.707-.708L8 11.293z" fill="currentColor"></path></svg>
                                         </button>
+                                        <div class="goals">
+                                            <div class="earn_degree">
+                                                <div class="earn">
+                                                    <h2>Goals</h2>
+                                                </div>
+                                                <ul>
+                                                    <li><a href="#"><span class="earn_a">Take a free course</span></a></li>
+                                                    <li><button class="earn_span"><span>Earn a Degree</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-137" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                    <li><button class="earn_span"><span>Earn a Certificate</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-138" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                    <li><a href="#"><span class=" earn_a">Find your new career</span></a></li>
+                                                </ul>
+                                            </div>    
+                                            <div class="maths">
+                                                <div class="earn">
+                                                    Subjects
+                                                </div>
+                                                <ul>
+                                                    <li><button class="earn_span"><span>Data Science</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-139" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                    <li><button class="earn_span"><span>Business</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-140" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                    <li><button class="earn_span"><span>Computer Science</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-141" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                    <li><button class="earn_span"><span>Information Technology</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-142" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                    <li><button class="earn_span"><span>Language Learning</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-143" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                    <li><button class="earn_span"><span>Health</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-144" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                    <li><button class="earn_span"><span>Personal Development</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-145" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                    <li><button class="earn_span"><span>Physical Science and Engineering</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-146" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                    <li><button class="earn_span"><span>Social Sciences</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-147" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                    <li><button class="earn_span"><span>Arts and Humanities</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-148" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                    <li><button class="earn_span"><span>Math and Logic</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-149" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                </ul>
+                                            </div>
+                                            <div class="new_career">
+                                                <a href="#"><span class="new_career">Browse all subjects</span></a>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="free_one">
                                         <div class="form">
@@ -45,7 +79,6 @@
                                             <div class="search-btn"><svg width="14px" height="16px" viewBox="0 0 16 16" version="1.1" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;"><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-293.000000, -23.000000)"><g fill="#E1E1E1"><g transform="translate(293.000000, 22.000000)"><path d="M11.355485,11.4503883 L16.0066609,16.1015642 L15.1015642,17.0066609 L10.4503883,12.355485 C9.34711116,13.2583262 7.93681293,13.8 6.4,13.8 C2.8653776,13.8 0,10.9346224 0,7.4 C0,3.8653776 2.8653776,1 6.4,1 C9.9346224,1 12.8,3.8653776 12.8,7.4 C12.8,8.93681293 12.2583262,10.3471112 11.355485,11.4503883 Z M6.4,12.52 C9.22769792,12.52 11.52,10.2276979 11.52,7.4 C11.52,4.57230208 9.22769792,2.28 6.4,2.28 C3.57230208,2.28 1.28,4.57230208 1.28,7.4 C1.28,10.2276979 3.57230208,12.52 6.4,12.52 Z"></path></g></g></g></svg></div>
                                         </div>
                                     </div>
-                                   
                                 </div>
                                 <div class="join_free">
                                     <div class="careers">
@@ -60,7 +93,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>ve
             </div>
         </div>
         <div class="header_there">
@@ -131,7 +164,7 @@
                             <div class="spanish">
                                 <label for="#" class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input type="checkbox" id="business" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Business
@@ -146,7 +179,7 @@
                             <div class="spanish">
                                 <label for="#" class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input type="checkbox" id="computer_science" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Computer Science
@@ -161,7 +194,7 @@
                             <div class="spanish">
                                 <label for="#" class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input type="checkbox" id="data_science" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Data Science
@@ -176,7 +209,7 @@
                             <div class="spanish">
                                 <label for="#" class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="Information_Technology" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Information Technology
@@ -1236,3 +1269,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
