--- a/index.html
+++ b/index.html
@@ -38,38 +38,40 @@
                                             <span>Explore</span>
                                             <svg aria-hidden="true" fill="none" focusable="false" height="12" viewBox="0 0 16 16" width="12" id="cds-react-aria-1" class="css-1u8qly9"><path fill-rule="evenodd" clip-rule="evenodd" d="M8 11.293L1.354 4.646l-.708.708L8 12.707l7.354-7.353-.707-.708L8 11.293z" fill="currentColor"></path></svg>
                                         </button>
-                                        <div class="goals">
-                                            <div class="earn_degree">
-                                                <div class="earn">
-                                                    <h2>Goals</h2>
+                                        <div class="goal_parent">
+                                            <div class="goals">
+                                                <div class="earn_degree">
+                                                    <div class="earn">
+                                                        <h2>Goals</h2>
+                                                    </div>
+                                                    <ul>
+                                                        <li><a href="#"><span class="earn_a">Take a free course</span></a></li>
+                                                        <li><button class="earn_span"><span>Earn a Degree</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-137" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                        <li><button class="earn_span"><span>Earn a Certificate</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-138" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                        <li><a href="#"><span class=" earn_a">Find your new career</span></a></li>
+                                                    </ul>
+                                                </div>    
+                                                <div class="maths">
+                                                    <div class="earn">
+                                                        Subjects
+                                                    </div>
+                                                    <ul>
+                                                        <li><button class="earn_span"><span>Data Science</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-139" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                        <li><button class="earn_span"><span>Business</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-140" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                        <li><button class="earn_span"><span>Computer Science</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-141" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                        <li><button class="earn_span"><span>Information Technology</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-142" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                        <li><button class="earn_span"><span>Language Learning</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-143" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                        <li><button class="earn_span"><span>Health</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-144" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                        <li><button class="earn_span"><span>Personal Development</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-145" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                        <li><button class="earn_span"><span>Physical Science and Engineering</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-146" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                        <li><button class="earn_span"><span>Social Sciences</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-147" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                        <li><button class="earn_span"><span>Arts and Humanities</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-148" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                        <li><button class="earn_span"><span>Math and Logic</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-149" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
+                                                    </ul>
                                                 </div>
-                                                <ul>
-                                                    <li><a href="#"><span class="earn_a">Take a free course</span></a></li>
-                                                    <li><button class="earn_span"><span>Earn a Degree</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-137" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
-                                                    <li><button class="earn_span"><span>Earn a Certificate</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-138" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
-                                                    <li><a href="#"><span class=" earn_a">Find your new career</span></a></li>
-                                                </ul>
-                                            </div>    
-                                            <div class="maths">
-                                                <div class="earn">
-                                                    Subjects
+                                                <div class="new_career">
+                                                    <a href="#"><span class="new_career">Browse all subjects</span></a>
                                                 </div>
-                                                <ul>
-                                                    <li><button class="earn_span"><span>Data Science</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-139" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
-                                                    <li><button class="earn_span"><span>Business</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-140" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
-                                                    <li><button class="earn_span"><span>Computer Science</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-141" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
-                                                    <li><button class="earn_span"><span>Information Technology</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-142" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
-                                                    <li><button class="earn_span"><span>Language Learning</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-143" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
-                                                    <li><button class="earn_span"><span>Health</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-144" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
-                                                    <li><button class="earn_span"><span>Personal Development</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-145" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
-                                                    <li><button class="earn_span"><span>Physical Science and Engineering</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-146" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
-                                                    <li><button class="earn_span"><span>Social Sciences</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-147" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
-                                                    <li><button class="earn_span"><span>Arts and Humanities</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-148" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
-                                                    <li><button class="earn_span"><span>Math and Logic</span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-149" class="css-1lzurvc" style="position: absolute; right: 20px; top: 5px;"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button></li>
-                                                </ul>
-                                            </div>
-                                            <div class="new_career">
-                                                <a href="#"><span class="new_career">Browse all subjects</span></a>
                                             </div>
                                         </div>
                                     </div>
@@ -93,7 +95,7 @@
                             </div>
                         </div>
                     </div>
-                </div>ve
+                </div>
             </div>
         </div>
         <div class="header_there">
@@ -1269,4 +1271,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
