--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <div class="computer">
                             <div class="computer_div">Subject</div>
                         </div>
-                        <div class="business">
+                        <div class="business businessp">
                             <div class="spanish">
                                 <label for="#" class="label">
                                     <span class="checkbox">
