--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         </div>
                         <div class="business businessp">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" id="business" width="24px" height="24px">
                                     </span>
@@ -179,7 +179,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" id="computer_science" width="24px" height="24px">
                                     </span>
@@ -194,7 +194,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" id="data_science" width="24px" height="24px">
                                     </span>
@@ -209,7 +209,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input id="Information_Technology" type="checkbox" width="24px" height="24px">
                                     </span>
@@ -231,7 +231,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -246,7 +246,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -261,7 +261,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -276,7 +276,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -298,7 +298,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -316,7 +316,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -334,7 +334,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -352,7 +352,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -377,7 +377,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -392,7 +392,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -407,7 +407,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -422,7 +422,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -444,7 +444,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -459,7 +459,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -474,7 +474,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -489,7 +489,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -511,7 +511,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -526,7 +526,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -541,7 +541,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -556,7 +556,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -578,7 +578,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -593,7 +593,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -608,7 +608,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -623,7 +623,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -645,7 +645,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -660,7 +660,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -675,7 +675,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
@@ -690,7 +690,7 @@
                         </div>
                         <div class="business">
                             <div class="spanish">
-                                <label for="#" class="label">
+                                <label   class="label">
                                     <span class="checkbox">
                                         <input type="checkbox" width="24px" height="24px">
                                     </span>
