--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="english" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         English
@@ -248,7 +248,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="french" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         French
@@ -263,7 +263,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="spanish" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Spanish
@@ -278,7 +278,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="portuguese" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Portuguese (Brazil)
@@ -300,7 +300,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="guided_projects" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Guided Projects
@@ -318,7 +318,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="courses" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Courses
@@ -336,7 +336,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="projects" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Projects
@@ -354,7 +354,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="specializations" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Specializations
@@ -379,7 +379,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="beginner" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Beginner
@@ -394,7 +394,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="intermediate" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Intermediate
@@ -409,7 +409,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="advanced" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Advanced
@@ -424,7 +424,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="mixed" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Mixed
@@ -446,7 +446,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="less_than_2_hours" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Less Than 2 Hours
@@ -461,7 +461,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="1_4_weeks" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         1-4 Weeks
@@ -476,7 +476,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="1_3_weeks" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         1-3 Weeks
@@ -491,7 +491,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="3_6_months" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         3-6 Months
@@ -513,7 +513,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="leadership_and_management" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Leadership and Management
@@ -528,7 +528,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="data_analysis" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Data Analysis
@@ -543,7 +543,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="communication" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Communication
@@ -558,7 +558,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="strategy" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Strategy
@@ -580,7 +580,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="english" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         English
@@ -595,7 +595,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="french" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         French
@@ -610,7 +610,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="spanish" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Spanish
@@ -625,7 +625,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="arabic" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Arabic
@@ -647,7 +647,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="coursera_project_network" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Coursera Project Network
@@ -662,7 +662,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="university_of_colorado_boulder" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         University of Colorado Boulder
@@ -677,7 +677,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="googlr_cloud" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         Google Cloud
@@ -692,7 +692,7 @@
                             <div class="spanish">
                                 <label   class="label">
                                     <span class="checkbox">
-                                        <input type="checkbox" width="24px" height="24px">
+                                        <input id="ibm" type="checkbox" width="24px" height="24px">
                                     </span>
                                     <span class="number">
                                         IBM
