--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Best Free Courses & Certificates</title>
 </head>
 <body>
+    <!-- --------------------------------head-------------------------- -->
     <header>
         <div class="header_individual">
             <div class="for_individual">
