--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
             </div>
         </div>
     </header>
+    <!-- -----------------------------body-------------------------- -->
     <div class="whole_browse">
         <div class="browse">
             <div class="arrows_whole_browse">
