--- a/index.html
+++ b/index.html
@@ -1088,6 +1088,7 @@
             </div>
         </div>
     </div>
+    <!-- --------------------------------footer------------------------ -->
     <footer class="footer">
     <div class="footer_whole">
             <div class="started">
